--- a/Code/app/src/main/res/layout/activity_g_f_m_c.xml
+++ b/Code/app/src/main/res/layout/activity_g_f_m_c.xml
@@ -54,6 +54,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_jfmc_nameOfForestDivision"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of Forest Division"
@@ -71,6 +72,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_jfmc_nameOfSubDivisionRange"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of Sub Division | Range"
@@ -87,6 +89,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_jfmc_nameOfVillageVDC"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of village | VDC"
@@ -103,6 +106,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_jfmc_nameOfJfmc"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of JFMC"
@@ -120,6 +124,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_jfmc_dateOfEstablishmentRegistration"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Date of Establishment | Registration"
@@ -136,6 +141,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_jfmc_nameOfPresident"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Name of President"
@@ -152,6 +158,7 @@
                 app:hintTextColor="@color/colorBlack">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/tv_jfmc_contact"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:hint="Contact Number"
@@ -161,6 +168,7 @@
 
 
             <LinearLayout
+                android:id="@+id/bt_jfmc_submit"
                 android:layout_width="match_parent"
                 android:layout_height="46dp"
                 android:layout_gravity="center"
