--- a/Code/app/src/main/res/layout/activity_j_f_m_c_view_data.xml
+++ b/Code/app/src/main/res/layout/activity_j_f_m_c_view_data.xml
@@ -59,10 +59,17 @@
 
     </RelativeLayout>
 
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_view_jfmc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"/>
-
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </LinearLayout>
