--- a/Code/app/src/main/res/layout/row_view_vdc.xml
+++ b/Code/app/src/main/res/layout/row_view_vdc.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="wrap_content">
-
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView_row_vdc"
@@ -15,7 +15,7 @@
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp">
 
-        <RelativeLayout
+       <!-- <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp">
@@ -40,26 +40,8 @@
                 android:textSize="16dp"
                 android:textStyle="bold" />
 
-           <LinearLayout
-               android:id="@+id/bt_edit_row_vdc"
-               android:layout_width="50dp"
-               android:layout_height="20dp"
-               android:layout_alignParentEnd="true"
-               android:layout_alignParentRight="true"
-               android:gravity="center"
-               android:layout_marginRight="10dp"
-               android:background="@drawable/edit_btn_shape">
 
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:text="Edit"
-                   android:textSize="12dp"
-                   android:textColor="@color/color_basic_red"/>
-
-           </LinearLayout>
-
-        </RelativeLayout>
+        </RelativeLayout>-->
 
         <LinearLayout
             android:id="@+id/LL_main"
@@ -118,6 +100,7 @@
                     android:layout_weight="1">
 
                     <TextView
+                        android:id="@+id/tv_forestDivision"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="16dp"
@@ -134,6 +117,7 @@
                     android:layout_weight="1">
 
                     <TextView
+                        android:id="@+id/tv_viewVDC_subDivisionRange"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="TextView"
@@ -144,6 +128,10 @@
                 </LinearLayout>
 
             </LinearLayout>
+
+
+            <!-- visibility gone-->
+
 
             <LinearLayout
                 android:id="@+id/LL2_expendableTextView"
@@ -181,7 +169,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="VDC |JFMC"
+                            android:text="Name of VDC |JFMC"
                             android:textColor="@color/colorBlack"
                             android:textSize="16dp"
                             android:textStyle="bold" />
@@ -201,6 +189,7 @@
                         android:layout_weight="1">
 
                         <TextView
+                            android:id="@+id/tv_viewVDC_nameOfVillage"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
@@ -217,6 +206,7 @@
                         android:layout_weight="1">
 
                         <TextView
+                            android:id="@+id/tv_viewVDC_nameOfVDC_JFMC"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="TextView"
@@ -277,6 +267,7 @@
                         android:layout_weight="1">
 
                         <TextView
+                            android:id="@+id/tv_viewVDC_dateOfEstablishmentRegistration"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
@@ -293,6 +284,7 @@
                         android:layout_weight="1">
 
                         <TextView
+                            android:id="@+id/tv_viewVDC_nameOfPresident"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="TextView"
@@ -334,7 +326,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Present Status"
+                            android:text="JFMC | WO"
                             android:textColor="@color/colorBlack"
                             android:textSize="16dp"
                             android:textStyle="bold" />
@@ -354,6 +346,7 @@
                         android:layout_weight="1">
 
                         <TextView
+                            android:id="@+id/tv_viewVDC_contact"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="16dp"
@@ -370,6 +363,7 @@
                         android:layout_weight="1">
 
                         <TextView
+                            android:id="@+id/tv_viewVDC_JFMC_WO"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="TextView"
@@ -380,6 +374,88 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="21dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:text="Total Member"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="16dp"
+                            android:textStyle="bold" />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1">
+
+                        <TextView
+                            android:id="@+id/tv_viewVDC_totalMember"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="16dp"
+                            android:text="TextView"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="16dp" />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ProgressBar
+                        android:id="@+id/pb_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:indeterminateTint="@android:color/white"
+                        android:layout_centerInParent="true"/>
+
+                <TextView
+                    android:id="@+id/tv_siteImage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Site Image"
+                    android:textColor="@color/colorBlack"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="16dp"
+                    android:textSize="18dp"
+                    android:layout_marginTop="8dp"/>
+
+
+                    <ImageView
+                        android:id="@+id/iv_showImage"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_siteImage"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/ico_image_placeholder"
+                        android:backgroundTint="@color/colorWhite"
+                        android:scaleType="fitXY"/>
+
+                </RelativeLayout>
 
             </LinearLayout>
 
@@ -394,11 +470,12 @@
                 android:textColor="@color/colorWhite" />
 
             <TextView
+                android:id="@+id/tv_viewVDC_dateTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="12:00pm"
                 android:layout_gravity="end"
                 android:layout_marginRight="10dp"
+                android:text="12:00pm"
                 android:textColor="@color/colorWhite"
                 android:textSize="16dp"
                 android:textStyle="bold" />
