latest update by Faizan

--- a/Code/app/src/main/res/layout/activity_c_d.xml
+++ b/Code/app/src/main/res/layout/activity_c_d.xml
@@ -192,7 +192,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="FORM FORESTRY"
+                        android:text="FARM FORESTRY"
                         android:layout_centerInParent="true"
                         android:textColor="@color/colorWhite"
                         android:textSize="18dp"
