--- a/Code/app/src/main/res/layout/dashboard_nav_header.xml
+++ b/Code/app/src/main/res/layout/dashboard_nav_header.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -11,12 +11,14 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_dashboard_profile"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_alignParentBottom="true"
             android:src="@drawable/ic_launcher_background"
             android:layout_marginBottom="36dp"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginLeft="8dp"
+            app:civ_border_color="@color/colorWhite"
+            app:civ_border_width="2dp"/>
 
 
         <LinearLayout
@@ -25,7 +27,7 @@
             android:layout_toRightOf="@+id/iv_dashboard_profile"
             android:layout_marginLeft="16dp"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="36dp"
+            android:layout_marginBottom="50dp"
             android:orientation="vertical">
 
             <TextView
